--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^16.18.108",
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
+    "colorjs.io": "^0.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^6.26.2",
